# My-personal-Projects

./: Battle for Tech Supremacy  README.md  fabric defect final review ppt.pptx
DASHBOARD/: CHina_VS_Japan.ipynb  HR DATA DASHBOARD  Salary Analysis DashBoard  china-vs-japan-eda.ipynb
DASHBOARD/AP Election Dashboard/: AP Constituency.xlsx  AP Constitution  Wise.xlsx  AP Election
DASHBOARD/Credit Card Dashboard/: Dahboard 5  Star.pbix  Starschema dashboard.pbix  credit card risk management.pbix
DASHBOARD/DASHBOARD 3/: Electric Vehicle Dashboard.pbix  Electric vehicle dashboard
DASHBOARD/EXCEL DASHBOARD/: Final-Project(Dashboard-1)-Veerendra Amaravathi.xlsm  Multi-Regional Sales Analysis
DASHBOARD/Election analysis/: 2024 Election Analysis.pbix  Indian Politics Data - Copy.xlsx  dashboard
DASHBOARD/HR DATA/: HR DATA DASHBOARD  Hr data base new project.pbix
DASHBOARD/Inventory Daashboard file/: Inventary dashboard  TCS STOCK MARKET ANALYSIS.pbix
DASHBOARD/Salary Analysis Dashboard/: Salary Analysis
DASHBOARD/Star Bucks Dashboard/: Star Bucks Analysis
DASHBORAD/: The Tech War
Projects/: Gesture Globe: AI Meets Geography  New projects
Projects/AI virtual chat bot project/: chat_model.h5  intents.json  main.py  model_train.py  tokenizer.pkl
Projects/CHATBOT PROJECT./: chatbot_driven_universities_chatbots.py  chatbot_driven_universities_eda.py  chatbot_driven_universities_nlp_analysis.py
Projects/sharry boii project/: .gitignore  README.md  ai_agents.py  camera.py  chat_manager.py  config.py  main.py  main_old.py  pyproject.toml
(+54 files in other folders)
